More fixes for labels FoC jumpiness.

--- a/scss/partials/_stream_item.scss
+++ b/scss/partials/_stream_item.scss
@@ -218,6 +218,10 @@ div.stream-item {
     align-items: center;
     justify-content: flex-start;
 
+    &.has-labels {
+      height: 48px;
+    }
+
     div.stream-item-header-left {
       position: relative;
       height: 24px;
